Feature system version 20190828 (#32)
* Added system model.

* Added system to session.
